# SenseCAP-Gateway-OS

./: .config  .gitmodules  README.md  README_es.md  README_fr.md  README_ja.md  README_pt.md  README_zh-CN.md
feeds/lorawan-gateway/bacnet-stack/: Makefile
feeds/lorawan-gateway/bacnet-stack/files/: bacnet.init
feeds/lorawan-gateway/bacnet-stack/files/etc/uci-defaults/: 74_bacnet
feeds/lorawan-gateway/basicstation_ubus/: Makefile
feeds/lorawan-gateway/basicstation_ubus/files/etc/init.d/: basicstation
feeds/lorawan-gateway/basicstation_ubus/patches/: 001-build-with-mbedtls-3.x.patch
feeds/lorawan-gateway/hardware-info/: note.md  write_eeprom.sh
feeds/lorawan-gateway/lte-serve/files/: lte-serve.init  lte-serve.sh
feeds/lorawan-gateway/rs485-bacnet/: Cargo.toml  Makefile
feeds/lorawan-gateway/rs485-bacnet/files/: rs485-bacnet.init
feeds/lorawan-gateway/rs485-bacnet/src/: main.rs
feeds/lorawan-gateway/rs485-modbus/src/: main.rs
feeds/lorawan-gateway/ubus-serve/files/: ubus-serve.lua
feeds/lorawan-gateway/wifi-module/: Makefile  README.md
feeds/lorawan-gateway/wifi-module/files/: wifi-module.sh
feeds/lorawan-gateway/wifi-module/files/etc/uci-defaults/: 65_disable_wpad_jail
feeds/luci-lorawan-gateway/luci-app-bacnet/: Makefile
feeds/luci-lorawan-gateway/luci-app-bacnet/root/etc/uci-defaults/: 80_luci-app-bacnet
feeds/luci-lorawan-gateway/luci-app-gateway/: Makefile
feeds/luci-lorawan-gateway/luci-theme-sensecap/: Makefile
feeds/luci-lorawan-gateway/luci-theme-sensecap/less/: cascade.less
(+23 files in other folders)
