[package]
name = "rs485-bacnet"
version = "1.0.0"
edition = "2021"

[dependencies]
rumqttc = { version = "0.24", features = ["websocket"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rustls-pemfile = "2.2"
webpki-roots = "0.26"
